--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
+    "cloudinary": "^2.4.0",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
+    "multiparty": "^4.2.3",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
