--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-sortablejs": "^6.1.4",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
